# crawler-data

./: .gitignore  .pre-commit-config.yaml  README.md  data.json  proxy_list.txt  pyproject.toml
src/: settings.py
src/spiders/: coin98.py  tapchibitcoin_tapchi.py  tutorial.py
